# coreason-council

./: .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  VIGNETTE.md  mkdocs.yml  pyproject.toml
docs/: index.md  requirements.md  usage.md
src/coreason_council/: __init__.py  main.py  policies.py  reviewer.py  server.py  settings.py
src/coreason_council/core/: __init__.py  aggregator.py  council_service.py  dissenter.py  llm_aggregator.py  llm_client.py  llm_proposer.py  panel_selector.py  proposer.py  speaker.py  types.py
src/coreason_council/core/models/: interaction.py  persona.py  trace.py  verdict.py
src/coreason_council/utils/: logger.py
tests/: test_aggregator.py  test_budget.py  test_budget_edge_cases.py  test_cli_edge_cases.py  test_cli_llm_edge_cases.py  test_cli_llm_integration.py  test_complex_budget_scenarios.py  test_complex_scenarios.py  test_core_types.py  test_core_types_edge_cases.py  test_council_service.py  test_deadlock.py  test_dissenter.py  test_dissenter_edge_cases.py  test_gateway_client.py  test_jaccard_complex.py  test_jaccard_dissenter.py  test_llm_aggregator.py  test_llm_aggregator_edge_cases.py  test_llm_client.py  test_llm_proposer.py  test_llm_proposer_edge_cases.py  test_main.py  test_mocks.py  test_openai_client.py  test_panel_selector.py  test_panel_selector_coverage.py  test_policies.py  test_proposer.py  test_refactor_complex.py  test_refactor_edge_cases.py  test_reviewer.py  test_server.py  test_server_review.py  test_speaker.py  test_speaker_budget.py  test_speaker_edge_cases.py  test_speaker_high_entropy_edge_cases.py  test_utils.py
